# anki-card-extractor

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-pypi.yml
anki_card_extractor/: card.py  cli.py  html_parser.py  utils.py
anki_card_extractor/cards/: monoglotanxiety.py
anki_card_extractor/parsers/: learngerman.py
anki_vocab_extractor/: card.py  card_generator.py  cli.py  get_html.py  html_parser.py  parser.py  vocabulary.py
anki_vocab_extractor/cards/: monoglotanxiety.py
anki_vocab_extractor/parsers/: learngerman.py
tests/: sample_html_learngerman.html  test_card_generator.py  test_learngerman.py  test_parser.py
