[tool.poetry]
name = "anki-vocab-extractor"
version = "0.1.0"
description = ""
authors = ["Daniel Lusk <daniel.lusk@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.scripts]
anki-vocab-extractor = "anki_vocab_extractor.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
