[tool.poetry]
name = "anki-card-extractor"
version = "0.2.0"
description = ""
authors = ["Daniel Lusk <daniel.lusk@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pandas = "^2.2.3"
playwright = "^1.48.0"

[tool.poetry.scripts]
ace = "anki_card_extractor.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
types-beautifulsoup4 = "^4.12.0.20241020"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"